<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.photobackup.ui.main.photos.PhotosFragment"
            android:label="@string/title_photos"
            tools:layout="@layout/fragment_photos"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.photobackup.ui.main.dashboard.DashboardFragment"
            android:label="@string/title_folders"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.photobackup.ui.main.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>
</navigation>