<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/frameLayout">

        <TextView
                android:text="PhotoBackup"
                android:textSize="70px"
                android:textStyle="bold"
                android:id="@+id/logo"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center" />
    </FrameLayout>

    <EditText
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etUsername"
            android:hint="@string/username_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <EditText
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password_text"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="72dp" />

    <Button
            android:text="@string/login_button"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:id="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="136dp" />


</androidx.constraintlayout.widget.ConstraintLayout>